package love.mcfxu.medicalPlatform.domain.model;

import love.mcfxu.medicalPlatform.domain.entity.RegistrationSheet;

/**
 *挂号单数据传输对象
 */
public class RegistrationSheetList extends RegistrationSheet {

}

